# STIndex

./: .env.example  .gitignore  ARCHITECTURE_REFACTOR.md  CLI_GUIDE.md  COMPLETE_PROJECT_DOCUMENTATION.md  COMPREHENSIVE_TEST_REPORT.md  ENGLISH_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  PIPELINE_ARCHITECTURE.md  README.md  REFACTOR_SUMMARY.md  REPORT.html  REPORT.md  STIndex.html  TEST_SUITE_ENGLISH.md  WORKFLOW_DIAGRAMS.md  com.stindex.mcp.plist.example  comprehensive_test_results.txt  docker-compose.yml  english_test_results.txt  environment-mac.yml  environment.yml  pyproject.toml  recalculate_summary.py  regenerate_entities_with_hierarchy.py  requirements-mac.txt  requirements.txt  sample_text.txt  setup.cfg  setup.py  stindex-rag-dataset-guide.html  test_comprehensive.py  test_dynamic_context.py  test_english_suite.py  test_gpt4o_mini_geocoding.py  test_hierarchy_fix.py  test_improvements.py  test_mirage_context_example.py  (+6 more)
.github/workflows/: ci.yml  deploy-vercel.yml  publish.yml
case_studies/: __init__.py
case_studies/public_health/: EXECUTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  TASKS_COMPLETE.md  __init__.py
case_studies/wa_news/: README.md
cfg/: anthropic.yml  dimensions.yml  evaluate.yml  extract.yml  hf.yml  hf_multi_gpu.yml  huggingface.yml  mcp.yml  ms_swift.yml  schema_discovery.yml  vllm.yml  warehouse.yml
cfg/corpus/: textbook_filtering.yml
cfg/discovery/: textbook_schema.yml
cfg/evaluation/: efficiency_evaluation.yml  qa_evaluation.yml
cfg/extraction/: corpus_extraction_parallel.yml  corpus_extraction_test.yml  corpus_extraction_textbook.yml  corpus_extraction_textbook_test.yml
cfg/preprocess/: chunking.yml
docs/: PIPELINE_ARCHITECTURE.md
eval/: BATCH_EVAL_README.md  QUICKSTART.md  README.md  SUMMARY.md  __init__.py  batch_evaluation.py  batch_evaluation_accelerate.py  evaluation.py  quick_start.py
eval_data/: doc_500.json
examples/: advanced_example.py  basic_example.py  context_aware_extraction_demo.py  ms_swift_example.py  pandas_integration.py  quick_test_qwen.py  test_local_model.py  v0.4.0_usage_examples.py
frontend/: .env.example  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
rag/: README.md  __init__.py  pipeline.py
rag/cfg/: ingestion.yaml
rag/eval/: __init__.py  qa_evaluation.py  qa_metrics.py
rag/generator/: __init__.py  generator.py  prompts.py
rag/preprocess/: extract_grpo_docs.py
rag/retriever/: __init__.py  query_processor.py  retriever.py  rrf_retriever.py  three_stage_retriever.py
report_package/: README.md  REPORT.html  health_events_map.html  interactive_timeline.html
scripts/: check_servers.sh  check_vllm_servers.sh  combine_corpus.py  compare_ablation.py  compare_ablation_comprehensive.py  compare_baseline_vs_context.py  convert_maven_to_stindex.py  deploy_ms_swift.sh  download_data.sh  download_medcorp_full.sh  migrate_dimension_configs.py  patch_extraction_results.py  process_data.sh  regenerate_events.py  regenerate_schemas.py  restart_server.sh  restart_servers.sh  restart_vllm_servers.sh  run_ablation_study.py  run_schema_discovery_qwen_full.sh  run_schema_discovery_qwen_test.sh  run_sequential_pipeline.sh  slurm_schema_discovery_qwen.sh  slurm_schema_discovery_qwen_test.sh  start_multi_gpu_servers.sh  start_server.sh  start_servers.sh  start_vllm_servers.sh  status_server.sh  stop_ms_swift.sh  stop_server.sh  stop_servers.sh  stop_vllm_servers.sh  test_chunk_merge_pipeline.py  test_server.sh
scripts/discovery/: discover_schema.sh
scripts/evaluate/: evaluate_gemini.sh  evaluate_hf.sh  evaluate_openai.sh
scripts/extract/: extract_anthropic.sh  extract_gemini.sh  extract_hf.sh  extract_openai.sh
scripts/extraction/: deploy_vllm_2gpus.sh  deploy_vllm_parallel.sh  extract_corpus.sh  extract_corpus_parallel.sh  extract_corpus_parallel_v2.sh  final_merge.sh  monitor_progress.sh  patch_failed_chunks.py  resume_2gpus.sh  stop_extraction_parallel.sh  stop_vllm_parallel.sh  verify_test_results.sh
scripts/rag/: build_bgem3_index.py  build_dimension_indexes.py  build_dimensional_metadata.py  convert_dimension_index_to_faiss_idx.py  run_qa_evaluation_3stage.py  test_dimensional_retrieval.py  verify_dimensional_integration.py
scripts/server/: deploy_ms_swift.sh  deploy_vllm_multi_server.sh  stop_ms_swift.sh
stindex/: __init__.py  cli.py  mcp_oauth.py  mcp_oidc_proxy.py  mcp_server.py
stindex/agents/: __init__.py  base.py  extractor.py
stindex/analysis/: __init__.py  clustering.py  dimension_analyzer.py  export.py  story_detection.py
stindex/core/: __init__.py  dimensional_extraction.py  extraction.py  extractor.py  utils.py
stindex/discovery/: README.md  __init__.py  cluster_entity_extractor.py  cluster_schema_discoverer.py  models.py  question_clusterer.py  schema_merger.py
stindex/eval/: __init__.py  efficiency_evaluation.py  metrics.py  (+4 more)
tests/: README.md  __init__.py  test_comprehensive.py  test_english_suite.py  test_extractor.py  test_geocoder.py  test_geocoder_e2e.py  test_geocoder_integration.py  test_improvements.py  test_pdf_example.py  test_qa_evaluation.py  test_qa_metrics.py  test_time_normalizer.py
(+212 files in other folders)
