[metadata]
name = stindex
version = 0.1.0
description = Spatiotemporal Index Extraction from Unstructured Text
long_description = file: README.md
long_description_content_type = text/markdown
author = STIndex Team
author_email = stindex@example.com
url = https://github.com/Ameame1/stindex
project_urls =
    Documentation = https://github.com/Ameame1/stindex#readme
    Source = https://github.com/Ameame1/stindex
    Bug Tracker = https://github.com/Ameame1/stindex/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Linguistic
keywords = nlp, spatiotemporal, information-extraction, ner, geocoding, temporal-extraction

[options]
packages = find:
python_requires = >=3.9
install_requires =
    langchain>=0.1.0
    langchain-openai>=0.0.5
    langchain-anthropic>=0.1.0
    pydantic>=2.0.0
    spacy>=3.7.0
    dateparser>=1.2.0
    pendulum>=3.0.0
    geopy>=2.4.0
    pandas>=2.0.0
    rich>=13.0.0
    typer>=0.9.0
    python-dotenv>=1.0.0
include_package_data = True
zip_safe = False

[options.packages.find]
include = stindex*
exclude = tests*, docs*

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.5.0
transformers =
    transformers>=4.30.0
    torch>=2.0.0
    accelerate>=0.25.0

[options.entry_points]
console_scripts =
    stindex = stindex.cli:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=stindex --cov-report=term-missing

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[coverage:run]
source = stindex
omit =
    */tests/*
    */test_*.py
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
